--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Adventure stories'
 - !lcsh 'Pirates -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: "The Admirable Lady Biddy Fane\r\nHer Surprising Curious Adventures In Strange\
   \ Parts & Happy Deliverance From Pirates, Battle, Captivity, & Other Terrors; Together\
   \ With Divers Romantic & Moving Accidents As Set Forth By Benet Pengilly (Her Companion\
